--- a/_includes/sobre.html
+++ b/_includes/sobre.html
@@ -2,26 +2,19 @@
   <div class="sobre-wrap">
     <div class='sobre-container'>
       <h3 id="sobre">Sobre</h3>
-      <p>Olá! Sejam muito bem vindos!</p>
-      <p>Aceitam um cafezinho? Água? Chá? </p>
-      <p>Se perguntando que tipo de gente oferece café no texto de um site?</p>
+      <p>Olá! Aceitam um cafezinho? Água? Chá?</p>
+      <p>Se perguntando quem oferece isso em um site?</p>
       <br>
-      <p>Estávamos ansiosamente esperando sua visita.</p>
-      <p>Sim, nós sabíamos que vocês iriam nos visitar um dia. Por isso, permanecemos firmes e fortes, devaneando com o dia que vocês viriam nos visitar. E agora que estão aqui, sentimos a esperança renovada. Tudo vai ficar bem. Hoje é um ótimo dia.</p>
-      <br>
-      <p>Então sejam bem vindos, damas e cavalheiros, sejam muito bem vindo ao site da <strong id="mq">MainQuest Produções</strong>!</p>
-        <span class="lermais">ler mais</span>
+      <p>Pois estávamos ansiosamente esperando sua visita.</p>
+      <p>Sejam bem vindos, damas e cavalheiros, sejam muito bem vindos ao site da <strong id="mq">MainQuest</strong>!</p>
+      <p>Podemos dizer que, basicamente, somos uma empresa que trabalha com <strong>soluções audiovisuais</strong> diversificadas. Mas vamos desenvolver um pouco mais:</p>
+      <span class="lermais">ler mais</span>
       <div class="sobre-hidden">
         <div class="sobre-text">
-          <p>...mas o que é a MainQuest Produções?</p>
-          <p>Somos uma empresa que trabalha com <strong>soluções audiovisuais</strong>!</p>
-          <br>
-          <p>Nossa equipe é formada por profissionais do design, publicidade e propaganda, computação gráfica e audiovisual. E usando isso ao nosso (e seu) favor, somos aptos a desenvolver projetos distintos podendo também mesclar todas essas áreas.</p>
-          <br>
-          <p>Como assim?</p>
-          <p><strong>Filmamos, fotografamos, fazemos vinhetas, animações em 2D ou 3D</strong>...tudo com uma arte bem bonita! Também transformamos uma sequência de fotos em um vídeo animado, ou animamos fotografias, ou animamos desenhos, ou criamos imagens loucas para transformar em um vídeo psicodélico, ou filmamos imagens reais e as mesclamos com imagens em 2D, (essas imagens também podem ser animadas, ou em 3D, ou o que você quiser) ou... Já falamos que fazemos tudo isso com uma arte bem bonita?</p>
-          <br>
-          <p>Aproveitem e deem uma olhada no nosso portfólio (que está em constante fase de crescimento) ou já entrem em contato conosco, ou os dois... Vamos nos conhecer!</p>
+          <p>Nossa  equipe  é  formada  por  profissionais  do  design,  publicidade  e  propaganda, computação gráfica e produção audiovisual. E usando isso ao nosso (e seu) favor, somos aptos a desenvolver projetos distintos, podendo também mesclar todas essas áreas.</p>
+          <p>Trabalhos com arte estão ligados à diferentes sentimentos e sensações, por isso não podemos  nos  enquadrar  em  algum  padrão  exato  e  fechado.  Da  mesma  forma,  a criatividade sempre exige uma cabeça aberta, livre para aceitar quaisquer pensamentos e ideias que possam surgir, para depois serem trabalhadas.</p>
+          <p>E é justamente por isso, meus caros, que afirmamos trabalhar com <strong>soluções audiovisuais</strong>.   Animações,   filmes,   documentários,   clipes,   stopmotions,   vídeos institucionais,... A <strong id="mq">MainQuest</strong> existe desde 2014 e sempre esteve aberta para novas (ou tradicionais) possibilidades dentro do audiovisual. Tem uma ideia ou precisa de alguma?</p>
+          <a href="#contato" id="bold">Vamos conversar!</a>
           <span class="lermenos">ler menos</span>
         </div>
       </div>
