--- a/assets/css/_sass/3-sections/_sobre.sass
+++ b/assets/css/_sass/3-sections/_sobre.sass
@@ -11,6 +11,9 @@
   #mq
     color: $alt1-color
 
+  #bold
+    font-weight: bold
+
   .lermais, .lermenos
     display: inline-block
     float: right
