--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
       </a>
     </div>
     <div class="social">
-      <a class="ct-link" href="https://www.facebook.com/pages/MainQuest-Produ%C3%A7%C3%B5es/1401283936836291" target="_blank">
+      <a class="ct-link" href="https://www.facebook.com/mainquest.solucoes.audiovisuais" target="_blank">
         <div class="footer-icon">{% include icons/icon-face.html %}</div>
       </a>
       <a class="ct-link" href="http://vimeo.com/mainquest" target="_blank">
